# Songci-GPT

./: .gitignore  README.md  inference.py  model.py  pyproject.toml  tokenizer.py  train.py
scratch/: README.md  dataset.py  inference.py  train.py
unsloth/: README.md  train_qwen_songci.py
