[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "fire>=0.7.1",
    "jieba>=0.42.1",
    "numpy>=2.4.1",
    "orjson>=3.11.5",
    "peft==0.18.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "unsloth>=2026.1.2",
]
